kubernetes/apps/default/osint/app/maigret-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: maigret
  namespace: default
  labels:
    app.kubernetes.io/name: maigret
spec:
  selector:
    app.kubernetes.io/name: maigret
  ports:
    - name: http
      port: 80
      targetPort: http
