kubernetes/apps/default/osint/app/maigret-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Maigret"
    gethomepage.dev/group: "OSINT"
    gethomepage.dev/icon: "mdi-account-search"
    gethomepage.dev/href: "https://maigret.${DOMAIN}"
  name: maigret
spec:
  hostnames:
    - maigret.${DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: maigret
          port: 80
