kubernetes/apps/default/osint/app/social-analyzer-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: social-analyzer
spec:
  hostnames:
    - social-analyzer.${DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: social-analyzer
          port: 80
